--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,69 @@
-/* trang chu */
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 
 }
+#head{
+    border-style: ridge;
+}
+body{
+    border: #000;
+}
 
+ul li{
+    list-style: none;
+}
+#logo{
+    text-transform: uppercase;
+    border-style:  double ;
+                            background-color:black;
+                            color: #fff;
+                                width:160px;
+                                height:160px;
+                              border-radius: 80px;
+                              padding: 15px;
+                            font-weight: bold 10px;
+                            font-size: 24px;
+}
 
-/* trang blog */
+#connect{
+    vertical-align: middle;
+    border-style: none;
+    width: 40px;
+}
+ #insta{
+    width: 100px;
+    height: 100px;
+    padding: 5px;
+}
+#navbarNav{
+    text-transform: uppercase;
+    border-top: 2px solid #000;
+    border-bottom: 2px solid #000;
+    padding: 10px;
+}
+#title{
+    text-transform: uppercase;
+    font-size: 30px;
+}
+
+#button-right {
+    text-transform: uppercase;
+    border: 1px solid #000;
+  background-color: #000;
+    color: #fff;
+    font-size: 12px;
+    margin-bottom:30px;
+    margin-top: -65px;
+    padding: 20px;
+    text-align: center;
+}
+#col-right {
+    width: 300px;
+    border: 1px solid #000;
+    padding: 40px;
+    margin: 20px;
+};
 
