--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,9 @@ body{
 ul li{
     list-style: none;
 }
+                  
+
+  
 #logo{
     text-transform: uppercase;
     border-style:  double ;
@@ -27,7 +30,16 @@ ul li{
     font-weight: bold 10px;
     font-size: 24px;
 }
-
+#detail {
+    width: 500px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-height: 25px;
+    -webkit-line-clamp: 1;   
+    height: 75px;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+}
 #connect{
     vertical-align: middle;
     border-style: none;
@@ -47,6 +59,7 @@ ul li{
 #title{
     text-transform: uppercase;
     font-size: 30px;
+  
 }
 
 #button-right {
